- Control effects faders     - Fixed seperator line not showing     - Added 'power' channel from HMI type to ignored channels - Dropdown menu     - Enlarged for easier touch selection     - Animation speeded up

--- a/electron-vite-project/src/components/DropDown.css
+++ b/electron-vite-project/src/components/DropDown.css
@@ -27,13 +27,13 @@
   text-align: left;
   overflow: hidden;
   /* min-width: 145px;  For consistend width in animation */
-  --ddHeight: 186px; /* Height of dowpdown */
-  --ddWidth: 145px; /* Width of dowpdown */
-  animation: openDropdown 0.2s ease-out forwards;
+  --ddHeight: 214px; /* Height of dowpdown */
+  --ddWidth: 150px; /* Width of dowpdown */
+  animation: openDropdown 150ms ease-out forwards;
 }
 
 .dropdown.closed {
-  animation: closeDropdown 0.2s ease-out forwards;
+  animation: closeDropdown 150ms ease-out forwards;
 }
 
 @keyframes openDropdown {
@@ -43,7 +43,7 @@
     width: 30px;
   }
   to {
-    max-height: var(--ddHeight); /* Height of dowpdown */
+    max-height: var(--ddHeight);
     opacity: 1;
     width: var(--ddWidth);
   }
@@ -64,7 +64,7 @@
 
 .dropdown > p {
   margin: 0;
-  padding: 0.375rem 0.88rem;
+  padding: 9px 15px;
   border-bottom: 1px solid var(--onepStroke);
   white-space: nowrap;
 }
